# performance_lab

./: README.md  author.txt
test1/: CMakeLists.txt  inp1  test1.cpp  test1.h
test2/: CMakeLists.txt  CMakeLists.txt.in  main.cpp  test2.cpp  test2.h
test2/tests/: CMakeLists.txt  main.cpp
test3/: CMakeLists.txt  main.cpp
test4/: CMakeLists.txt  main.cpp  misc.cpp  misc.h
test4/tests/: CMakeLists.txt  main.cpp
